--- a/vercel.json
+++ b/vercel.json
@@ -3,4 +3,10 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "astro"
+    "rewrites": [
+    {
+      "source": "/admin",
+      "destination": "/admin/index.html"
+    }
+  ],
 }
