Revert vercel.json to original state

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "framework": "astro",
-    "rewrites": [
-    {
-      "source": "/admin",
-      "destination": "/admin/index.html"
-    }}
+  "framework": "astro"
+}
